eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/CSI_Record__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Comments__c</fullName>
        <label>Customer Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_Application_Completed__c</fullName>
        <label>Date Application Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Time_of_Survey__c</fullName>
        <label>Date &amp; Time of Survey</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_when_you_were_last_served__c</fullName>
        <label>Date &amp; Time when you were last served</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Enter_Prize_Draw__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enter Prize Draw</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HPP_Amount__c</fullName>
        <label>HPP Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HPP_Customer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HPP Customer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CSI Records (HPP Customer Name)</relationshipLabel>
        <relationshipName>CSI_Records1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HPP_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>HPP Survey</description>
        <label>HPP Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>CSI Records</relationshipLabel>
        <relationshipName>CSI_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HPP_Specialist_BDM_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Please enter the name of the BDM/HPP Specialist</description>
        <inlineHelpText>Please enter the name of the BDM/HPP Specialist</inlineHelpText>
        <label>HPP Specialist/BDM Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CSI_Records1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HPP_Survey_CSI_Score__c</fullName>
        <formula>HPP_Survey_Total_CSI_Score__c /80</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPP Survey CSI Score %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HPP_Survey_Comments__c</fullName>
        <description>Please enter the customers overall comments made during the HPP Survey</description>
        <inlineHelpText>Please enter the customers overall comments made during the HPP Survey</inlineHelpText>
        <label>HPP Survey Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HPP_Survey_Total_CSI_Score__c</fullName>
        <label>HPP Survey Total CSI Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_EasyInitial_IBB_Contact__c</fullName>
        <description>How Easy did you find it to speak to someone at  IBB when you had decided to use the bank  to purchase your new home?</description>
        <label>How Easy Initial IBB Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Very easy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Easy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Difficult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very difficult</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_Happy_Info_provided_formulae__c</fullName>
        <formula>CASE(   How_Satisfied_were_you_with_the_info__c  , &quot;Very Disatisfied&quot;,4.165,&quot;Disatisfied&quot;,8.33,&quot;Satisfied&quot;,12.495,&quot;Very Satisfied&quot;,16.66,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>How Happy Info provided formulae</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_Helpful_were_the_staff__c</fullName>
        <inlineHelpText>1= Extremely Dissatsfied
2= Dissatisfied
3= Satisfied
4= Very Satisfied</inlineHelpText>
        <label>How Helpful were the staff?</label>
        <picklist>
            <picklistValues>
                <fullName>Extremely Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_Professional_were_the_staff__c</fullName>
        <inlineHelpText>1= Extremely Dissatsfied
2= Dissatisfied
3= Satisfied
4= Very Satisfied</inlineHelpText>
        <label>How Professional were the staff</label>
        <picklist>
            <picklistValues>
                <fullName>Extremely Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_Satisfied_queries_handled_pre_comp__c</fullName>
        <description>How satisfied were you with how we handled any enquiries you had post application and before completion of your Hoem Purchase Plan?</description>
        <inlineHelpText>How satisfied were you with how we handled any enquiries you had post application and before completion of your Home Purchase Plan?</inlineHelpText>
        <label>How Satisfied - queries handled pre comp</label>
        <picklist>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Disatisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_Satisfied_were_you_with_the_info__c</fullName>
        <description>How satisfied were you with the information provided to you in relation to your Home Purchase Plan application with IBB?</description>
        <inlineHelpText>How satisfied were you with the information provided to you in relation to your Home Purchase Plan application with IBB?</inlineHelpText>
        <label>How Satisfied were you with the info</label>
        <picklist>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Disatisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_did_you_rate_your_HPP_Specialist_BDM__c</fullName>
        <description>How did you arte the level of service provided to you during your Application by our HPP Specialist/Business Development Mnager(BDM?</description>
        <inlineHelpText>How did you rate the level of service provided to you during your Application by our HPP Specialist/Business Development Mnager(BDM)?</inlineHelpText>
        <label>How Satisfied with HPP Specialist/BDM</label>
        <picklist>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Disatisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_helpful_was_the_Staff_member__c</fullName>
        <formula>CASE(  How_Helpful_were_the_staff__c , &quot;Extremely Dissatisfied&quot;,6.25,&quot;Dissatisfied&quot;,12.5,&quot;Satisfied&quot;,18.75,&quot;Very Satisfied&quot;,25,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>How helpful was the Staff member?</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_likely_would_you_be_to_recommend__c</fullName>
        <description>Used to calculate NPS Scores</description>
        <inlineHelpText>Ask the Customer on a scale of 0-10(with 0 being not likely at all and 10 would be extermely likely) how likely are you to recommend Al Rayan Bank to a friend colleague or relative?</inlineHelpText>
        <label>How likely would you be to recommend?</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_long_did_the_customer_wait__c</fullName>
        <formula>CASE(  How_long_you_had_to_wait__c , &quot;Extremely Disatisfied&quot;,6.25,&quot;Dissatisfied&quot;,12.5,&quot;Satisfied&quot;,18.75,&quot;Very Satisfied&quot;,25,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>How long did the customer wait?</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_long_you_had_to_wait__c</fullName>
        <inlineHelpText>1= Extremely Dissatsfied
2= Dissatisfied
3= Satisfied
4= Very Satisfied</inlineHelpText>
        <label>How long you had to wait.</label>
        <picklist>
            <picklistValues>
                <fullName>Extremely Disatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_professional_was_the_Staff_member_Po__c</fullName>
        <formula>CASE(  How_Professional_were_the_staff__c , &quot;Extremely Dissatisfied&quot;,6.25,&quot;Dissatisfied&quot;,12.5,&quot;Satisfied&quot;,18.75,&quot;very satisfied&quot;,25,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>How professional was the Staff member Po</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>If_not_easy_then_please_tell_us_why__c</fullName>
        <description>Not easy score explanation</description>
        <inlineHelpText>If the customer has not found it extremely or very easy to get the help they wanted today please ask them to explain why as this will be the meaningful insight that will help us to improve our processes and make things easy for them in the future</inlineHelpText>
        <label>If not easy then please tell us why?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Level_of_Knowledge_Points__c</fullName>
        <formula>CASE( Level_of_Staff_Knowledge__c , &quot;Extremely Dissatisfied&quot;,6.25,&quot;Dissatisfied&quot;,12.5,&quot;Satisfied&quot;,18.75,&quot;very Satisfied&quot;,25,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Scoring for level of Staff Knowledge</inlineHelpText>
        <label>Level of Knowledge Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_of_Staff_Knowledge__c</fullName>
        <inlineHelpText>1= Extremely Dissatsfied
2= Dissatisfied
3= Satisfied
4= Very Satisfied</inlineHelpText>
        <label>Level of Staff Knowledge</label>
        <picklist>
            <picklistValues>
                <fullName>Extremely Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Member_of_Staff_Served_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member of Staff/Seller Served by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CSI_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name_of_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name of Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CSI Records</relationshipLabel>
        <relationshipName>CSI_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Overall_HPP_experience_points__c</fullName>
        <formula>CASE(     Overall_how_satisfied_were_you_with_IBB__c  , &quot;Very Disatisfied&quot;,4.165,&quot;Disatisfied&quot;,8.33,&quot;Satisfied&quot;,12.495,&quot;Very satisfied&quot;,16.66,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall HPP experience points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_How_easy_was_it_to_get_the_help__c</fullName>
        <description>To calculate the &apos;Net easy&apos; Customer Effort  Score</description>
        <inlineHelpText>Overall How easy was it to get the help you wanted today? (This question  is to measure how the customer feels about how easy it is to do business with them).</inlineHelpText>
        <label>Overall How easy was it to get the help?</label>
        <picklist>
            <picklistValues>
                <fullName>Extremely easy (1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very easy (2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fairly easy (3)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neither (4)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fairly Difficult (5)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Difficult (6)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely difficult (7)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overall_how_satisfied_were_you_with_IBB__c</fullName>
        <description>How would you rate the overall experience with IBB in purchasing your new Home?</description>
        <inlineHelpText>How would you rate the overall experience with IBB in purchasing your new Home?</inlineHelpText>
        <label>Overall how satisfied were you with IBB</label>
        <picklist>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Disatisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Post_App_pre_completion_points__c</fullName>
        <formula>CASE(    How_Satisfied_queries_handled_pre_comp__c , &quot;Very Disatisfied&quot;,4.165,&quot;Disatisfied&quot;,8.33,&quot;Satisfied&quot;,12.495,&quot;Very satisfied&quot;,16.66,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Post App pre completion points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q10_Score__c</fullName>
        <formula>CASE( Q10__c, &quot;IBB was much better&quot;,5,&quot;IBB was better&quot;,4,&quot;IBB was the same&quot;,3,&quot;IBB was worse&quot;,2,&quot;IBB was much worse&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q10 Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q10__c</fullName>
        <description>HPP survey</description>
        <label>Q10</label>
        <picklist>
            <picklistValues>
                <fullName>IBB was much better</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBB was better</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBB was the same</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBB was worse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBB was much worse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q11_Score__c</fullName>
        <formula>CASE( Q11__c, &quot;Exceeded expectations&quot;,5,&quot;Met expectations&quot;,4,&quot;Unsure&quot;,3,&quot;Slightly failed to meet expectations&quot;,2,&quot;Totally failed to meet expectations&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q11 Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q11__c</fullName>
        <label>Q11</label>
        <picklist>
            <picklistValues>
                <fullName>Exceeded expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Met expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slightly failed to meet expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Totally failed to meet expectations</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q11a__c</fullName>
        <description>HPP survey</description>
        <label>Q11a</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q12_Score__c</fullName>
        <formula>CASE( Q12__c, &quot;Very clear&quot;,5,&quot;Clear&quot;,4,&quot;Unsure&quot;,3,&quot;Confusing&quot;,2,&quot;Very confusing&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q12 Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q12__c</fullName>
        <description>HPP survey</description>
        <label>Q12</label>
        <picklist>
            <picklistValues>
                <fullName>Very clear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confusing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very confusing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q16a__c</fullName>
        <label>Q16a</label>
        <picklist>
            <picklistValues>
                <fullName>Very satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very dissatisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q16a_score__c</fullName>
        <formula>CASE( Q16a__c, &quot;Very satisfied&quot;,5,&quot;Satisfied&quot;,4,&quot;Unsure&quot;,3,&quot;Dissatisfied&quot;,2,&quot;Very dissatisfied&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q16a score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q16b_Score__c</fullName>
        <formula>CASE( Q16b__c, &quot;Very satisfied&quot;,5,&quot;Satisfied&quot;,4,&quot;Unsure&quot;,3,&quot;Dissatisfied&quot;,2,&quot;Very dissatisfied&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q16b Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q16b__c</fullName>
        <label>Q16b</label>
        <picklist>
            <picklistValues>
                <fullName>Very satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very dissatisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q17a__c</fullName>
        <label>Q17a</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q2_HPP_Survey_Comments__c</fullName>
        <description>Please enter any comments in relation to question 2</description>
        <label>Q2 HPP Survey Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q3_HPP_Survey_Comments__c</fullName>
        <description>Please enter any comments in relation to Q3</description>
        <inlineHelpText>Please enter any comments in relation to Q3</inlineHelpText>
        <label>Q3 HPP Survey Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q3a_score__c</fullName>
        <formula>CASE( Q3a__c, &quot;Definitely agree&quot;,5,&quot;Agree&quot;,4,&quot;Unsure&quot;,3,&quot;Do not agree&quot;,2,&quot;Do not agree at all&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q3a Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q3b__c</fullName>
        <description>HPP survey</description>
        <label>Q3b</label>
        <picklist>
            <picklistValues>
                <fullName>Definitely agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not agree at all</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q3b_score__c</fullName>
        <formula>CASE( Q3a__c, &quot;Definitely agree&quot;,5,&quot;Agree&quot;,4,&quot;Unsure&quot;,3,&quot;Do not agree&quot;,2,&quot;Do not agree at all&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q3b Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q3c_Score__c</fullName>
        <formula>CASE( Q3c__c, &quot;Definitely agree&quot;,5,&quot;Agree&quot;,4,&quot;Unsure&quot;,3,&quot;Do not agree&quot;,2,&quot;Do not agree at all&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q3c Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q3c__c</fullName>
        <label>Q3c</label>
        <picklist>
            <picklistValues>
                <fullName>Definitely agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not agree at all</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q3d_Score__c</fullName>
        <formula>CASE( Q3d__c, &quot;Definitely agree&quot;,5,&quot;Agree&quot;,4,&quot;Unsure&quot;,3,&quot;Do not agree&quot;,2,&quot;Do not agree at all&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q3d Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q3d__c</fullName>
        <description>HPP survey</description>
        <label>Q3d</label>
        <picklist>
            <picklistValues>
                <fullName>Definitely agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not agree at all</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q3e_Score__c</fullName>
        <formula>CASE( Q3e__c, &quot;Definitely agree&quot;,5,&quot;Agree&quot;,4,&quot;Unsure&quot;,3,&quot;Do not agree&quot;,2,&quot;Do not agree at all&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q3e Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q3e__c</fullName>
        <description>HPP survey</description>
        <label>Q3e</label>
        <picklist>
            <picklistValues>
                <fullName>Definitely agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not agree at all</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q4_HPP_Survey_Comments__c</fullName>
        <description>Please enter any comments in relation to Q4</description>
        <label>Q4 HPP Survey Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q4b__c</fullName>
        <description>HPP survey</description>
        <label>Q4b</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q9a_Score__c</fullName>
        <formula>CASE( Q9a__c, &quot;10&quot;,10,&quot;9&quot;,9,&quot;8&quot;,8,&quot;7&quot;,7,&quot;6&quot;,6,&quot;5&quot;,5,&quot;4&quot;,4,&quot;3&quot;,3,&quot;2&quot;,2,&quot;1&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q9a Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q9b_Score__c</fullName>
        <formula>CASE( Q9b__c, &quot;10&quot;,10,&quot;9&quot;,9,&quot;8&quot;,8,&quot;7&quot;,7,&quot;6&quot;,6,&quot;5&quot;,5,&quot;4&quot;,4,&quot;3&quot;,3,&quot;2&quot;,2,&quot;1&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q9b Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q9c__c</fullName>
        <description>HPP survey</description>
        <label>Q9c</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_by_Sales_Rep_points__c</fullName>
        <formula>CASE(    How_did_you_rate_your_HPP_Specialist_BDM__c   , &quot;Very Disatisfied&quot;,4.165,&quot;Disatisfied&quot;,8.33,&quot;Satisfied&quot;,12.495,&quot;very satisfied&quot;,16.66,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service by Sales Rep points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_provided_by_your_solicitor__c</fullName>
        <label>Service provided by your solicitor</label>
        <picklist>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Dissatisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Solicitor_Points__c</fullName>
        <formula>CASE(     rate_the_level_of_Service_from_Solicitor__c  , &quot;Very Disatisfied&quot;,4.165,&quot;Disatisfied&quot;,8.33,&quot;Satisfied&quot;,12.495,&quot;Very satisfied&quot;,16.66,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Solicitor Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_CSI_Score__c</fullName>
        <formula>How_helpful_was_the_Staff_member__c + How_long_did_the_customer_wait__c + How_professional_was_the_Staff_member_Po__c + Level_of_Knowledge_Points__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total CSI Score</inlineHelpText>
        <label>Total CSI Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_HPP_CSI_Score__c</fullName>
        <formula>Overall_HPP_experience_points__c  +  Post_App_pre_completion_points__c  +  recommendation_points__c  +  Service_by_Sales_Rep_points__c  +  Solicitor_Points__c  +   How_Happy_Info_provided_formulae__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total HPP CSI Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_type__c</fullName>
        <description>Please Enter the Transaction type</description>
        <inlineHelpText>Please Enter the Transaction type</inlineHelpText>
        <label>Transaction type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>